@@ -197,12 +197,24 @@ describe matcher:
   - it diagnoses incompatible arguments:
       expect (expect (function () end).should_contain "nothing").
         should_error "string, table or object expected"
+  - context with a_permutation_of adaptor:
+    - it diagnoses incompatible arguments to expect:
+        expect (expect (function () end).should_contain.a_permutation_of ("nothing")).
+          should_error "string, table or object expected"
+    - it diagnoses incompatible arguments to adaptor:
+        expect (expect ("nothing").should_contain.a_permutation_of (function () end)).
+          should_error "string or table expected"
 
   - context when receiving a string:
     - it displays expected and actual output for failures:
         yaml = preamble .. "('tilde').should_contain '~'"
         expect (run_spec (yaml)).
           should_contain_output 'expecting string containing "~", but got "tilde"'
+    - it displays expected and actual output for a_permutation_of failures:
+        yaml = preamble .. "('tilde').should_contain.a_permutation_of ('elite')"
+        expect (run_spec (yaml)).
+          should_contain_output ('expecting string containing a permutation of ' ..
+                                 '"elite", but got "tilde"')
     - it displays all expected and actual output for all_of failures:
         yaml = preamble .. "('tilde').should_contain.all_of {'t', 'i', 'de', '~'}"
         expect (run_spec (yaml)).
@@ -216,6 +228,9 @@ describe matcher:
     - context while called normally:
       - it succeeds if the substring is present:
           expect ("English Language").should_contain "e"
+      - it succeeds if a permutation of the listed string is present:
+          expect ("english language").
+           should_contain.a_permutation_of "ungenial haggles"
       - it succeeds if all of the listed substrings are present:
           expect ("English Language").
            should_contain.all_of {"English", "Language", "ngu"}
@@ -224,6 +239,10 @@ describe matcher:
            should_contain.any_of {"Cornish", "English", "Gaelic"}
       - it fails if the substring is absent:
           yaml = preamble .. "('English Language').should_contain '~'"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it fails if a permutation of the listed string is absent:
+          yaml = preamble .. "('english language').should_contain." ..
+                 "a_permutation_of 'engaged languish'"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails of any of the listed substrings is absent:
           yaml = preamble .. "('English Language').should_contain." ..
@@ -236,6 +255,9 @@ describe matcher:
     - context while called with not_ prefix:
       - it succeeds if the substring is absent:
           expect ("English Language").should_not_contain "~"
+      - it succeeds if a permutation of the listed string is absent:
+          expect ("english language").should_not_contain.
+            a_permutation_of "engaged languish"
       - it succeeds if none of the listed substrings is present:
           expect ("English Language").should_not_contain.
             all_of {"Celtic", "Cornish", "Gaelic"}
@@ -244,6 +266,10 @@ describe matcher:
             any_of {"Celtic", "Cornish", "Gaelic"}
       - it fails if the substring is present:
           yaml = preamble .. "('English Language').should_not_contain 'e'"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it fails if a permutation of the listed string is present:
+          yaml = preamble .. "('english language').should_not_contain."..
+                 "a_permutation_of 'ungenial haggles'"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails if all of the listed substrings are present:
           yaml = preamble .. "('English Language').should_not_contain." ..
@@ -271,6 +297,14 @@ describe matcher:
                                 "%s*|%s*%[2%] = \"two\",\n" ..
                                 "%s*|%s*%[3%] = \"five\",\n" ..
                                 "%s*| %}\n")
+    - it displays all expected and actual output for a_permutation_of failures:
+        yaml = preamble .. "({'one', 'two'}).should_contain.a_permutation_of {'three', 'four'}"
+        expect (run_spec (yaml)).
+          should_match_output ('expecting table containing a permutation of "three" and "four", but got:\n' ..
+                                "%s*| %{\n" ..
+                                "%s*|%s*%[1%] = \"one\",\n" ..
+                                "%s*|%s*%[2%] = \"two\",\n" ..
+                                "%s*| %}\n")
     - it displays all expected and actual output for all_of failures:
         yaml = preamble .. "({'one', 'two', 'five'})." ..
                "should_contain.all_of {'one', 'three'}"
@@ -290,9 +324,14 @@ describe matcher:
                                 "%s*|%s*%[2%] = \"two\",\n" ..
                                 "%s*|%s*%[3%] = \"five\",\n" ..
                                 "%s*| %}\n")
+
     - context while called normally:
       - it succeeds if the element is a table value:
           yaml = preamble .. vals .. ".should_contain 'five'"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it succeeds if listed elements are a permutation of table values:
+          yaml = preamble .. vals .. ".should_contain." ..
+                 "a_permutation_of {'one', 'two', 'five'}"
           expect (run_spec (yaml)).should_contain_output (pass_all)
       - it succeeds if all listed elements are a table value:
           yaml = preamble .. vals .. ".should_contain." ..
@@ -305,6 +344,10 @@ describe matcher:
       - it succeeds if the element is a table key:
           yaml = preamble .. keys .. ".should_contain 'five'"
           expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it succeeds if listed elements are a permutation of table keys:
+          yaml = preamble .. keys .. ".should_contain." ..
+                 "a_permutation_of {'one', 'two', 'five'}"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
       - it succeeds if all listed elements are a table key:
           yaml = preamble .. keys .. ".should_contain." ..
                  "all_of {'one', 'two', 'five'}"
@@ -316,7 +359,11 @@ describe matcher:
       - it succeeds with a one-deep match of a table element:
           yaml = preamble .. deep .. ".should_contain { 'subtable 2' }"
           expect (run_spec (yaml)).should_contain_output (pass_all)
-      - it succeeds if all elements are  common to both tables:
+      - it succeeds if both tables contain the same elements:
+          yaml = preamble .. deep .. ".should_contain." ..
+          "a_permutation_of {{'subtable 2'}, {'subtable 1', {'sub-subtable'}}}"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it succeeds if all elements are common to both tables:
           yaml = preamble .. deep .. ".should_contain." ..
           "all_of {{'subtable 2'}, 2}"
           expect (run_spec (yaml)).should_contain_output (pass_all)
@@ -326,6 +373,10 @@ describe matcher:
           expect (run_spec (yaml)).should_contain_output (pass_all)
       - it fails if the element is not a table value:
           yaml = preamble .. vals .. ".should_contain 'three'"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it fails if listed elements are not a permutation of table values:
+          yaml = preamble .. vals .. ".should_contain." ..
+                 "a_permutation_of {'one', 'two', 'nine'}"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails if the there are any missing elements:
           yaml = preamble .. vals .. ".should_contain." ..
@@ -340,11 +391,19 @@ describe matcher:
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails any element is not also a table key:
           yaml = preamble .. keys .. ".should_contain." ..
+                 "a_permutation_of {'one', 'two', 'three'}"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it fails any element is not also a table key:
+          yaml = preamble .. keys .. ".should_contain." ..
                  "all_of {'one', 'two', 'three'}"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails if no element is also a table key:
           yaml = preamble .. keys .. ".should_contain." ..
                  "any_of {'three', 'three', 'nine'}"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it fails if either table contains a unique element:
+          yaml = preamble .. deep .. ".should_contain." ..
+          "a_permutation_of {{'subtable 1'}, {'subtable 2', {'sub-subtable'}}}"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails if there are any elements missing from the table:
           yaml = preamble .. deep .. ".should_contain." ..
@@ -359,6 +418,10 @@ describe matcher:
       - it succeeds if the element is not a table value:
           yaml = preamble .. vals .. ".should_not_contain 'three'"
           expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it succeeds if listed elements are not a permutation of table values:
+          yaml = preamble .. vals .. ".should_not_contain." ..
+                 "a_permutation_of {'one', 'two', 'nine'}"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
       - it succeeds if all listed elements are not table values:
           yaml = preamble .. vals .. ".should_not_contain." ..
                  "all_of {'three', 'three', 'six'}"
@@ -369,6 +432,10 @@ describe matcher:
           expect (run_spec (yaml)).should_contain_output (pass_all)
       - it succeeds if the element is not a table key:
           yaml = preamble .. keys .. ".should_not_contain 'three'"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it succeeds any element is not also a table key:
+          yaml = preamble .. keys .. ".should_not_contain." ..
+                 "a_permutation_of {'one', 'two', 'three'}"
           expect (run_spec (yaml)).should_contain_output (pass_all)
       - it succeeds if all listed elements are not table keys:
           yaml = preamble .. keys .. ".should_not_contain." ..
@@ -381,6 +448,10 @@ describe matcher:
       - it succeeds with no one-deep match of a table element:
           yaml = preamble .. deep .. ".should_not_contain { 'subtable 1' }"
           expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it succeeds if either table contains a unique element:
+          yaml = preamble .. deep .. ".should_not_contain." ..
+          "a_permutation_of {{'subtable 1'}, {'subtable 2', {'sub-subtable'}}}"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
       - it succeeds if there are no elements common to both tables:
           yaml = preamble .. deep .. ".should_not_contain." ..
                  "all_of { 'subtable 1' }"
@@ -391,6 +462,10 @@ describe matcher:
           expect (run_spec (yaml)).should_contain_output (pass_all)
       - it fails if the element is a table value:
           yaml = preamble .. vals .. ".should_not_contain 'five'"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it fails if listed elements are a permutation of table values:
+          yaml = preamble .. vals .. ".should_not_contain." ..
+                 "a_permutation_of {'one', 'two', 'five'}"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails if all listed elements are table values:
           yaml = preamble .. vals .. ".should_not_contain." ..
@@ -403,6 +478,10 @@ describe matcher:
       - it fails if the element is a table key:
           yaml = preamble .. keys .. ".should_not_contain 'five'"
           expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it fails if listed elements are a permutation of table keys:
+          yaml = preamble .. keys .. ".should_not_contain." ..
+                 "a_permutation_of {'one', 'two', 'five'}"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails if all listed elements are table keys:
           yaml = preamble .. keys .. ".should_not_contain." ..
                  "all_of {'one', 'two', 'five'}"
@@ -413,6 +492,10 @@ describe matcher:
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails with a one-deep match of a table element:
           yaml = preamble .. deep .. ".should_not_contain { 'subtable 2' }"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it fails if both tables contain the same elements:
+          yaml = preamble .. deep .. ".should_not_contain." ..
+          "a_permutation_of {{'subtable 2'}, {'subtable 1', {'sub-subtable'}}}"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it fails if all elements are in both tables:
           yaml = preamble .. deep .. ".should_not_contain." ..
@@ -434,6 +517,15 @@ describe matcher:
         yaml = preamble .. "_contain 'nothing'"
         expect (run_spec (yaml)).
           should_match_output ("expecting Process containing \"nothing\", but got:\n" ..
+                                "%s*| %{\n" ..
+                                "%s*|%s*errout = \"bad\",\n" ..
+                                "%s*|%s*output = \"good\",\n" ..
+                                "%s*|%s*status = 1,\n" ..
+                                "%s*| %}\n")
+    - it displays all expected and actual output for a_permutation_of failures:
+        yaml = preamble ..  "_contain.a_permutation_of {'good', 'bad', 0}"
+        expect (run_spec (yaml)).
+          should_match_output ('expecting Process containing a permutation of "good", "bad" and 0, but got:\n' ..
                                 "%s*| %{\n" ..
                                 "%s*|%s*errout = \"bad\",\n" ..
                                 "%s*|%s*output = \"good\",\n" ..
@@ -464,6 +556,12 @@ describe matcher:
       - it fails if the element is not a table value:
           yaml = preamble .. "_contain 'marvellous'"
           expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it succeeds if listed elements are a permutation of table values:
+          yaml = preamble ..  "_contain.a_permutation_of {'bad', 1, 'good'}"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it fails if listed elements are not a permutation of table values:
+          yaml = preamble ..  "_contain.a_permutation_of {'bad', 1, 'bad'}"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
       - it succeeds if all listed elements are a table value:
           yaml = preamble ..  "_contain.all_of {1, 'good', 'bad'}"
           expect (run_spec (yaml)).should_contain_output (pass_all)
@@ -481,6 +579,12 @@ describe matcher:
           expect (run_spec (yaml)).should_contain_output (pass_all)
       - it fails if the element is not a table key:
           yaml = preamble .. "_contain 'heinous'"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it succeeds if listed elements are a permutation of table keys:
+          yaml = preamble ..  "_contain.a_permutation_of {'status', 'output', 'errout'}"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it fails if listed elements are not a permutation of table keys:
+          yaml = preamble ..  "_contain.a_permutation_of {'status', 'output', 'errout', 1}"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it succeeds if all listed elements are a table key:
           yaml = preamble ..  "_contain.all_of {'status', 'output', 'errout'}"
@@ -501,6 +605,12 @@ describe matcher:
       - it fails if the element is a table value:
           yaml = preamble .. "_not_contain 'good'"
           expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it succeeds if listed elements are not a permutation of table values:
+          yaml = preamble ..  "_not_contain.a_permutation_of {1, 'bad'}"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it fails if listed elements are a permutation of table values:
+          yaml = preamble ..  "_not_contain.a_permutation_of {'bad', 1, 'good'}"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
       - it succeeds if all listed elements are not a table value:
           yaml = preamble ..  "_not_contain.all_of {1, 'marvellous', 'bad'}"
           expect (run_spec (yaml)).should_contain_output (pass_all)
@@ -518,6 +628,12 @@ describe matcher:
           expect (run_spec (yaml)).should_contain_output (pass_all)
       - it fails if the element is a table key:
           yaml = preamble .. "_not_contain 'status'"
+          expect (run_spec (yaml)).should_contain_output (fail_1)
+      - it succeeds if listed elements are not a permutation of table keys:
+          yaml = preamble ..  "_not_contain.a_permutation_of {'errout', 'errout', 'errout'}"
+          expect (run_spec (yaml)).should_contain_output (pass_all)
+      - it fails if listed elements are a permutation of table keys:
+          yaml = preamble ..  "_not_contain.a_permutation_of {'errout', 'status', 'output'}"
           expect (run_spec (yaml)).should_contain_output (fail_1)
       - it succeeds if all listed elements are not a table key:
           yaml = preamble ..  "_not_contain.all_of {'heinous', 'output', 'errout'}"
@@ -688,7 +804,7 @@ describe matcher:
   - it diagnoses incompatible expect arguments:
       yaml = preamble .. "(1).should_equal.the_size_of {}"
       expect (run_spec (yaml)).should_contain_error "table expected"
-  - it diagnoses incompatible expect arguments:
+  - it diagnoses incompatible adaptor arguments:
       yaml = preamble .. "({}).should_equal.the_size_of (1)"
       expect (run_spec (yaml)).should_contain_error "table expected"
   - it diagnoses unsupported matchers:
